--- a/UrbanLife.Web/wwwroot/css/payments-view.css
+++ b/UrbanLife.Web/wwwroot/css/payments-view.css
@@ -21,6 +21,8 @@ main {
     display: flex;
     gap: 5vw;
     justify-content: center;
+    max-width: 100vw;
+    flex-wrap: wrap;
 }
 
 .payment-card {
@@ -86,15 +88,7 @@ main {
 
 .default-btn {
     background-color: var(--clr-main-green);
-    width: 50%;
-    height: 10px;
-    transition: height 0.5s ease-out;
-    font-size: 0px;
-}
-
-.edit-btn {
-    background-color: #d5d914;
-    width: 30%;
+    width: 70%;
     height: 10px;
     transition: height 0.5s ease-out;
     font-size: 0px;
@@ -102,7 +96,7 @@ main {
 
 .delete-btn {
     background-color: var(--clr-log-out-red);
-    width: 20%;
+    width: 30%;
     height: 10px;
     transition: height 0.5s ease-out;
     font-size: 0px;
@@ -116,18 +110,6 @@ main {
 }
 
 .default-btn:hover {
-    font-size: 16px;
-    transition: font-size 0.5s;
-}
-
-.edit-btn:hover {
-    transition: 2s;
-    height: 30px;
-    padding-top: 3px;
-    transition: height 0.5s ease-in;
-}
-
-.edit-btn:hover {
     font-size: 16px;
     transition: font-size 0.5s;
 }
