Created all user controllers and initial views

--- a/UrbanLife.Web/Views/Shared/_Layout.cshtml
+++ b/UrbanLife.Web/Views/Shared/_Layout.cshtml
@@ -24,15 +24,15 @@
                     <a class="nav-anchor" href="/">Начало</a>
                 </li>
                 <li class="nav-list-item">
-                    <a class="nav-anchor" href="#">Пътувай</a>
+                    <a class="nav-anchor" href="/travel/choose">Пътувай</a>
                 </li>
                 <li class="nav-list-item">
-                    <a class="nav-anchor" href="#">Разписание</a>
+                    <a class="nav-anchor" href="/schedule/lines">Разписание</a>
                 </li>
                 @if (ViewBag.User != null)
                 {
                     <li class="nav-list-item">
-                        <a class="nav-anchor" href="#">Абонаменти</a>
+                        <a class="nav-anchor" href="/subscription/all">Абонаменти</a>
                     </li>
                 }
                 <li class="nav-list-item">
@@ -76,9 +76,9 @@
                         </a>
                     </li>
                     <li class="profile-menu-list-item">
-                        <a class="nav-anchor profile-item" href="#">
+                        <a class="nav-anchor profile-item" href="/user/account/subscriptions">
                             <i class="fa-solid fa-ticket"></i>
-                            &ensp;Покупки
+                            &ensp;Абонаменти
                         </a>
                     </li>
                     <li class="profile-menu-list-item">
