Created schedule page and inserted some lines and schedules in the database

--- a/UrbanLife.Web/Views/Home/Index.cshtml
+++ b/UrbanLife.Web/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
             <div class="service-card-content-container">
                 <h3 class="service-card-title">Пътуване</h3>
                 <p class="service-card-desc">Въведете начална и крайна спирка, както и абонамент, и сте готови за път!</p>
-                <a href="#" class="service-card-btn">Пътувай!</a>
+                <a href="/travel/choose" class="service-card-btn">Пътувай!</a>
             </div>
         </article>
         <article class="service-card">
@@ -33,7 +33,7 @@
             <div class="service-card-content-container">
                 <h3 class="service-card-title">Разписания</h3>
                 <p class="service-card-desc">Прегледай разписанията на градския транспорт и наличните линии!</p>
-                <a href="#" class="service-card-btn">Разписания</a>
+                <a href="/schedule/all" class="service-card-btn">Разписания</a>
             </div>
         </article>
         <article class="service-card">
@@ -43,7 +43,7 @@
             <div class="service-card-content-container">
                 <h3 class="service-card-title">Абонаменти</h3>
                 <p class="service-card-desc">Изберете вашия абонамент - дали ще пътувате с карта или билет и от какъв вид!</p>
-                <a href="#" class="service-card-btn">Абонаменти!</a>
+                <a href="/subscription/all" class="service-card-btn">Абонаменти!</a>
             </div>
         </article>
     </div>
