--- a/UrbanLife.Web/Views/Shared/_Layout.cshtml
+++ b/UrbanLife.Web/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                     <a class="nav-anchor" href="/travel/choose">Пътувай</a>
                 </li>
                 <li class="nav-list-item">
-                    <a class="nav-anchor" href="/schedule/lines">Разписание</a>
+                    <a class="nav-anchor" href="/schedule/all">Разписания</a>
                 </li>
                 @if (ViewBag.User != null)
                 {
