--- a/UrbanLife.Web/Views/Schedule/Line.cshtml
+++ b/UrbanLife.Web/Views/Schedule/Line.cshtml
@@ -1,5 +1,78 @@
-﻿@{
-    ViewData["Title"] = $"Линия 280";
+﻿@using UrbanLife.Core.ViewModels;
+@model LineViewModel
+@{
+    ViewData["Title"] = $"Линия {Model.LineNumber}";
 }
 
-<p>Преглед на разписанието за линия - 280 (промени го и в title-a)</p>
+<h1>Разписание за линия @Model.LineNumber</h1>
+<form class="choose-stop-form" action="/schedule/line" method="get">
+    <input asp-for=@Model.LineNumber type="hidden" />
+    <input asp-for=@Model.LineType type="hidden" />
+    <label asp-for=@Model.ChosenStopCode>Изберете код на спирка</label>
+    <select asp-for=@Model.ChosenStopCode>
+        @foreach (string stopCode in Model.StopCodes)
+        {
+            <option value=@stopCode>@stopCode</option>
+        }
+    </select>
+    <p>Изберете посока</p>
+    <label asp-for=@Model.ChosenDestination>@Model.FirstStop - @Model.LastStop</label>
+    <!--Value-то показва коя е крайната спирка-->
+    <input asp-for=@Model.ChosenDestination type="radio" value="@Model.LastStop" checked />
+    <label asp-for=@Model.ChosenDestination>@Model.LastStop - @Model.FirstStop</label>
+    <input asp-for=@Model.ChosenDestination type="radio" value="@Model.FirstStop" />
+    <input type="submit" value="Избери" />
+</form>
+<table>
+    <caption>Натиснете върху даден час, за да си купите билет за него!</caption>
+    <thead>
+        <tr>
+            <th>Час</th>
+            <th colspan="9">Пристига</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>06:00 - 08:00</td>
+            @foreach (TimeSpan time in Model.Arrivals.Where(a => a.Hours > 5 && a.Hours < 9).OrderBy(a => a.Ticks))
+            {
+                <td><a href="#">@time</a></td>
+            }
+        </tr>
+        <tr>
+            <td>09:00 - 11:00</td>
+            @foreach (TimeSpan time in Model.Arrivals.Where(a => a.Hours > 8 && a.Hours < 12).OrderBy(a => a.Ticks))
+            {
+                <td><a href="#">@time</a></td>
+            }
+        </tr>
+        <tr>
+            <td>12:00 - 14:00</td>
+            @foreach (TimeSpan time in Model.Arrivals.Where(a => a.Hours > 11 && a.Hours < 15).OrderBy(a => a.Ticks))
+            {
+                <td><a href="#">@time</a></td>
+            }
+        </tr>
+        <tr>
+            <td>15:00 - 17:00</td>
+            @foreach (TimeSpan time in Model.Arrivals.Where(a => a.Hours > 14 && a.Hours < 18).OrderBy(a => a.Ticks))
+            {
+                <td><a href="#">@time</a></td>
+            }
+        </tr>
+        <tr>
+            <td>18:00 - 20:00</td>
+            @foreach (TimeSpan time in Model.Arrivals.Where(a => a.Hours > 17 && a.Hours < 21).OrderBy(a => a.Ticks))
+            {
+                <td><a href="#">@time</a></td>
+            }
+        </tr>
+        <tr>
+            <td>21:00 - 23:00</td>
+            @foreach (TimeSpan time in Model.Arrivals.Where(a => a.Hours > 20 && a.Hours < 24).OrderBy(a => a.Ticks))
+            {
+                <td><a href="#">@time</a></td>
+            }
+        </tr>
+    </tbody>
+</table>
