Implemented client-side validation for login and register

--- a/UrbanLife.Web/Views/User/Register.cshtml
+++ b/UrbanLife.Web/Views/User/Register.cshtml
@@ -16,7 +16,7 @@
             <input asp-for=@Model.Email class="main-form-input" type="email" placeholder="mock@@test.com" />
         </div>
         <div><span asp-validation-for=@Model.Email class="form-text-danger"></span></div>
-        <div><span asp-validation-for=@Model.EmailAlreadyUsed class="form-text-danger"></span></div>
+        <div><span class="form-text-danger error-field"></span></div>
         <div class="form-row">
             <div class="form-row-element">
                 <label asp-for=@Model.FirstName>*Име</label>
@@ -62,4 +62,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/js/registerValidation.js"></script>
 }
