--- a/UrbanLife.Web/Views/User/Login.cshtml
+++ b/UrbanLife.Web/Views/User/Login.cshtml
@@ -13,15 +13,15 @@
         </p>
         <div class="form-row">
             <label asp-for=@Model.Email>Имейл адрес</label>
-            <input asp-for=@Model.Email type="email" />
+            <input asp-for=@Model.Email type="email" class="invalid-input"/>
         </div>
         <div><span asp-validation-for=@Model.Email class="form-text-danger"></span></div>
         <div class="form-row">
             <label asp-for=@Model.Password>Парола</label>
-            <input asp-for=@Model.Password type="password" />
+            <input asp-for=@Model.Password type="password" class="invalid-input"/>
         </div>
         <div><span asp-validation-for=@Model.Password class="form-text-danger"></span></div>
-        <div><span asp-validation-for=@Model.InvalidProfile class="form-text-danger"></span></div>
+        <div><span class="form-text-danger error-field"></span></div>
         <div class="login-btn-container">
             <input type="submit" class="login-btn" value="Вписване" />
         </div>
@@ -36,4 +36,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/js/loginAuthentication.js"></script>
 }
