--- a/UrbanLife.Web/Views/Account/Settings.cshtml
+++ b/UrbanLife.Web/Views/Account/Settings.cshtml
@@ -42,9 +42,9 @@
         </fieldset>
         <fieldset id="email-address" class="fieldset-item">
             <legend>Имейл адрес</legend>
-            <div><span asp-validation-for=@Model.Email class="form-text-danger"></span></div>
-            <div><span asp-validation-for=@Model.EmailAlreadyUsed class="form-text-danger"></span></div>
             <p>Текущ имейл адрес: @ViewBag.User.Email</p>
+            <div><span asp-validation-for=@Model.Email class="form-text-danger"></span></div>
+            <div><span class="form-text-danger error-field-email"></span></div>
             <div class="form-row">
                 <p>Нов имейл адрес</p>
                 <input asp-for=@Model.Email type="email" placeholder="pesho@@abc.de" class="main-input" />
@@ -73,7 +73,7 @@
             <legend>Парола</legend>
             <div><span asp-validation-for=@Model.Password class="form-text-danger"></span></div>
             <div><span asp-validation-for=@Model.ConfirmPassword class="form-text-danger"></span></div>
-            <div><span asp-validation-for=@Model.SamePassword class="form-text-danger"></span></div>
+            <div><span class="form-text-danger error-field-password"></span></div>
             <div class="form-row">
                 <p>Нова парола</p>
                 <input asp-for=@Model.Password type="password" class="password-input main-input" />
@@ -98,4 +98,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/js/accountSettingsValidation.js"></script>
 }
