--- a/UrbanLife.Web/Views/Travel/Choose.cshtml
+++ b/UrbanLife.Web/Views/Travel/Choose.cshtml
@@ -1,28 +1,118 @@
 ﻿@using UrbanLife.Core.ViewModels;
+@using UrbanLife.Data.Enums;
 @model TravelViewModel
 @{
     ViewData["Title"] = "Избиране на дестинация";
 }
 
-<h1>Вижте най-бързите маршрути до дадена дестинация!</h1>
-<h2>Само изберете начална и крайна спирка и час на потегляне!</h2>
-<form>
-    <label for="first-stop">Начална спирка</label>
-    <input type="text" list="first-stop-datalist" name="first-stop" />
-    <datalist id="first-stop-datalist">
-        <option value="Кв. Биримирци"></option>
-    </datalist>
-    <label for="last-stop">Крайна спирка</label>
-    <input type="text" list="last-stop-datalist" name="last-stop" />
-    <datalist id="last-stop-datalist">
-        <option value="Ж.к Бъкстон"></option>
-    </datalist>
-    <input type="time" value="18:40" />
-    <input type="submit" />
+<h1 class="main-title">Вижте най-бързите маршрути до дадена дестинация!</h1>
+<h2 class="secondary-title">Само изберете начална и крайна спирка и час на потегляне!</h2>
+<form class="travel-form" action="/travel/getRoutes" method="get">
+    <div class="form-row first-row">
+        <div class="form-col">
+            <div class="input-label-container">
+                <label asp-for=@Model.ChosenStopName>Име на начална спирка</label>
+                <input asp-for=@Model.ChosenStopName type="text" list="first-stop-names-datalist" class="main-input" />
+                <datalist id="first-stop-names-datalist">
+                    @foreach (string stopName in Model.AllStopNames)
+                    {
+                        <option value=@stopName>@stopName</option>
+                    }
+                </datalist>
+            </div>
+            <div>
+                <span>или</span>
+            </div>
+            <div class="input-label-container">
+                <label asp-for=@Model.ChosenStopCode>Код на начална спирка</label>
+                <input asp-for=@Model.ChosenStopCode type="text" list="first-stop-codes-datalist" class="main-input" />
+                <datalist id="first-stop-codes-datalist">
+                    @foreach (string stopCode in Model.AllStopCodes)
+                    {
+                        <option value=@stopCode>@stopCode</option>
+                    }
+                </datalist>
+            </div>
+        </div>
+        <div class="form-col">
+            <div class="input-label-container">
+                <label asp-for=@Model.ChosenLastStopName>Име на крайна спирка</label>
+                <input asp-for=@Model.ChosenLastStopName type="text" list="last-stop-names-datalist" class="main-input" />
+                <datalist id="last-stop-names-datalist">
+                    @foreach (string stopName in Model.AllStopNames)
+                    {
+                        <option value=@stopName>@stopName</option>
+                    }
+                </datalist>
+            </div>
+            <div>
+                <span>или</span>
+            </div>
+            <div class="input-label-container">
+                <label asp-for=@Model.ChosenLastStopCode>Код на крайна спирка</label>
+                <input asp-for=@Model.ChosenLastStopCode type="text" list="last-stop-codes-datalist" class="main-input" />
+                <datalist id="last-stop-codes-datalist">
+                    @foreach (string stopCode in Model.AllStopCodes)
+                    {
+                        <option value=@stopCode>@stopCode</option>
+                    }
+                </datalist>
+            </div>
+        </div>
+    </div>
+    <div class="form-time-row">
+        <label asp-for=@Model.WantedTime>Потегляне</label>
+        <input asp-for=@Model.WantedTime type="time" value=@Model.WantedTime.ToString(@"hh\:mm") class="main-input time-input" />
+    </div>
+    <div class="form-row">
+        <input type="submit" class="main-input submit-btn" />
+    </div>
 </form>
-@foreach (KeyValuePair<string, RouteViewModel> route in Model.Routes)
+@if (Model.Routes != null)
 {
-    <p>Потегля в @route.Value.Arrival.ToString(@"hh\:mm")ч. от @route.Value.StopCode (@route.Value.StopName) -> @route.Value.LineNumber @route.Value.LineType ->
-        @route.Value.NextStopCode (@route.Value.NextStopName) - @route.Value.LineRepeatings спирки 
-    </p>
+    <h3>
+        От @Model.ChosenStopName (@Model.ChosenStopCode) до @Model.ChosenLastStopName (@Model.ChosenLastStopCode) -
+        @if (Model.Routes.Sum(s => s.Value.LineRepeatings) != 1)
+        {
+            <span>@Model.Routes.Sum(s => s.Value.LineRepeatings) спирки</span>
+        }
+        else
+        {
+            <span>@Model.Routes.Sum(s => s.Value.LineRepeatings) спирка</span>
+        }
+    </h3>
+    <section class="routes">
+        @foreach (KeyValuePair<string, RouteViewModel> route in Model.Routes)
+        {
+            <p class="route-row">
+                @route.Value.LineNumber
+                @if (route.Value.LineType == LineType.BUS)
+                {
+                    <span>автобус</span>
+                }
+                else if (route.Value.LineType == LineType.TROLLEY)
+                {
+                    <span>тролей</span>
+                }
+                else if (route.Value.LineType == LineType.TRAM)
+                {
+                    <span>трамвай</span>
+                }
+                в @route.Value.Arrival.ToString(@"hh\:mm")ч. -> от
+                @route.Value.StopName (@route.Value.StopCode) до @route.Value.NextStopName (@route.Value.NextStopCode) - @route.Value.LineRepeatings
+                @if (route.Value.LineRepeatings != 1)
+                {
+                    <span>спирки</span>
+                }
+                else
+                {
+                    <span>спирка</span>
+                }
+            </p>
+        }
+    </section>
+}
+
+@section Styles {
+    <link rel="stylesheet" href="~/css/travel.css" />
 }
