Created initial subscription purchase page and updated some hyperlinks regarding it

--- a/UrbanLife.Web/Views/Subscription/All.cshtml
+++ b/UrbanLife.Web/Views/Subscription/All.cshtml
@@ -29,7 +29,7 @@
             <li><i class="fa-solid fa-circle-check"></i>&ensp;Пътувате редовно с градски транспорт</li>
             <li><i class="fa-solid fa-circle-check"></i>&ensp;Ще пътувате често с градски транспорт в дадения период</li>
         </ul>
-        <a class="main-input anchor-button submit-btn" href="#">Зареждане на карта</a>
+        <a class="main-input anchor-button submit-btn" href="/subscription/purchase?purchaseType=card">Зареждане на карта</a>
     </div>
     <div class="subscription-container">
         <h3 class="subscription-card-title">Билет</h3>
@@ -43,7 +43,7 @@
             <li><i class="fa-solid fa-circle-check"></i>&ensp;Пътувате с градски транспорт по изключение</li>
             <li><i class="fa-solid fa-circle-check"></i>&ensp;Имате динамичен ден, но нямате абонаментна карта за градски транпосрт</li>
         </ul>
-        <a class="main-input anchor-button submit-btn" href="#">Купуване на билет</a>
+        <a class="main-input anchor-button submit-btn" href="/subscription/purchase?purchaseType=ticket">Купуване на билет</a>
     </div>
 </div>
 
