--- a/UrbanLife.Web/Views/Schedule/Line.cshtml
+++ b/UrbanLife.Web/Views/Schedule/Line.cshtml
@@ -69,42 +69,66 @@ else if (Model.LineType == LineType.TROLLEY)
             <td class="arrival-interval">06:00 - 08:00</td>
             @foreach (TimeSpan time in Model.Arrivals.Where(a => a.Hours > 5 && a.Hours < 9).OrderBy(a => a.Ticks))
             {
-                <td class="arrival-time-col"><a href="#" class="arrive-time-link">@time.ToString(@"hh\:mm")</a></td>
+                <td class="arrival-time-col">
+                    <a href="/subscription/purchase?purchaseType=ticket&lineNumber=@Model.LineNumber
+&lineType=@Model.LineType.ToString().ToLower()&ticketStartTime=@time.ToString(@"hh\:mm")"
+                   class="arrive-time-link">@time.ToString(@"hh\:mm")</a>
+                </td>
             }
         </tr>
         <tr class="schedule-row">
             <td class="arrival-interval">09:00 - 11:00</td>
             @foreach (TimeSpan time in Model.Arrivals.Where(a => a.Hours > 8 && a.Hours < 12).OrderBy(a => a.Ticks))
             {
-                <td class="arrival-time-col"><a href="#" class="arrive-time-link">@time.ToString(@"hh\:mm")</a></td>
+                <td class="arrival-time-col">
+                    <a href="/subscription/purchase?purchaseType=ticket&lineNumber=@Model.LineNumber
+&lineType=@Model.LineType.ToString().ToLower()&ticketStartTime=@time.ToString(@"hh\:mm")"
+                   class="arrive-time-link">@time.ToString(@"hh\:mm")</a>
+                </td>
             }
         </tr>
         <tr class="schedule-row">
             <td class="arrival-interval">12:00 - 14:00</td>
             @foreach (TimeSpan time in Model.Arrivals.Where(a => a.Hours > 11 && a.Hours < 15).OrderBy(a => a.Ticks))
             {
-                <td class="arrival-time-col"><a href="#" class="arrive-time-link">@time.ToString(@"hh\:mm")</a></td>
+                <td class="arrival-time-col">
+                    <a href="/subscription/purchase?purchaseType=ticket&lineNumber=@Model.LineNumber
+&lineType=@Model.LineType.ToString().ToLower()&ticketStartTime=@time.ToString(@"hh\:mm")"
+                   class="arrive-time-link">@time.ToString(@"hh\:mm")</a>
+                </td>
             }
         </tr>
         <tr class="schedule-row">
             <td class="arrival-interval">15:00 - 17:00</td>
             @foreach (TimeSpan time in Model.Arrivals.Where(a => a.Hours > 14 && a.Hours < 18).OrderBy(a => a.Ticks))
             {
-                <td class="arrival-time-col"><a href="#" class="arrive-time-link">@time.ToString(@"hh\:mm")</a></td>
+                <td class="arrival-time-col">
+                    <a href="/subscription/purchase?purchaseType=ticket&lineNumber=@Model.LineNumber
+&lineType=@Model.LineType.ToString().ToLower()&ticketStartTime=@time.ToString(@"hh\:mm")"
+                   class="arrive-time-link">@time.ToString(@"hh\:mm")</a>
+                </td>
             }
         </tr>
         <tr class="schedule-row">
             <td class="arrival-interval">18:00 - 20:00</td>
             @foreach (TimeSpan time in Model.Arrivals.Where(a => a.Hours > 17 && a.Hours < 21).OrderBy(a => a.Ticks))
             {
-                <td class="arrival-time-col"><a href="#" class="arrive-time-link">@time.ToString(@"hh\:mm")</a></td>
+                <td class="arrival-time-col">
+                    <a href="/subscription/purchase?purchaseType=ticket&lineNumber=@Model.LineNumber
+&lineType=@Model.LineType.ToString().ToLower()&ticketStartTime=@time.ToString(@"hh\:mm")"
+                   class="arrive-time-link">@time.ToString(@"hh\:mm")</a>
+                </td>
             }
         </tr>
         <tr class="schedule-row">
             <td class="arrival-interval">21:00 - 23:00</td>
             @foreach (TimeSpan time in Model.Arrivals.Where(a => a.Hours > 20 && a.Hours < 24).OrderBy(a => a.Ticks))
             {
-                <td class="arrival-time-col"><a href="#" class="arrive-time-link">@time.ToString(@"hh\:mm")</a></td>
+                <td class="arrival-time-col">
+                    <a href="/subscription/purchase?purchaseType=ticket&lineNumber=@Model.LineNumber
+&lineType=@Model.LineType.ToString().ToLower()&ticketStartTime=@time.ToString(@"hh\:mm")"
+                   class="arrive-time-link">@time.ToString(@"hh\:mm")</a>
+                </td>
             }
         </tr>
     </tbody>
