--- a/UrbanLife.Web/Views/Schedule/Line.cshtml
+++ b/UrbanLife.Web/Views/Schedule/Line.cshtml
@@ -70,7 +70,7 @@ else if (Model.LineType == LineType.TROLLEY)
             @foreach (TimeSpan time in Model.Arrivals.Where(a => a.Hours > 5 && a.Hours < 9).OrderBy(a => a.Ticks))
             {
                 <td class="arrival-time-col">
-                    <a href="/subscription/purchase?purchaseType=ticket&lineNumber=@Model.LineNumber
+                    <a href="/subscription/purchase?subscriptionType=ticket&lineNumber=@Model.LineNumber
 &lineType=@Model.LineType.ToString().ToLower()&ticketStartTime=@time.ToString(@"hh\:mm")"
                    class="arrive-time-link">@time.ToString(@"hh\:mm")</a>
                 </td>
@@ -81,7 +81,7 @@ else if (Model.LineType == LineType.TROLLEY)
             @foreach (TimeSpan time in Model.Arrivals.Where(a => a.Hours > 8 && a.Hours < 12).OrderBy(a => a.Ticks))
             {
                 <td class="arrival-time-col">
-                    <a href="/subscription/purchase?purchaseType=ticket&lineNumber=@Model.LineNumber
+                    <a href="/subscription/purchase?subscriptionType=ticket&lineNumber=@Model.LineNumber
 &lineType=@Model.LineType.ToString().ToLower()&ticketStartTime=@time.ToString(@"hh\:mm")"
                    class="arrive-time-link">@time.ToString(@"hh\:mm")</a>
                 </td>
@@ -92,7 +92,7 @@ else if (Model.LineType == LineType.TROLLEY)
             @foreach (TimeSpan time in Model.Arrivals.Where(a => a.Hours > 11 && a.Hours < 15).OrderBy(a => a.Ticks))
             {
                 <td class="arrival-time-col">
-                    <a href="/subscription/purchase?purchaseType=ticket&lineNumber=@Model.LineNumber
+                    <a href="/subscription/purchase?subscriptionType=ticket&lineNumber=@Model.LineNumber
 &lineType=@Model.LineType.ToString().ToLower()&ticketStartTime=@time.ToString(@"hh\:mm")"
                    class="arrive-time-link">@time.ToString(@"hh\:mm")</a>
                 </td>
@@ -103,7 +103,7 @@ else if (Model.LineType == LineType.TROLLEY)
             @foreach (TimeSpan time in Model.Arrivals.Where(a => a.Hours > 14 && a.Hours < 18).OrderBy(a => a.Ticks))
             {
                 <td class="arrival-time-col">
-                    <a href="/subscription/purchase?purchaseType=ticket&lineNumber=@Model.LineNumber
+                    <a href="/subscription/purchase?subscriptionType=ticket&lineNumber=@Model.LineNumber
 &lineType=@Model.LineType.ToString().ToLower()&ticketStartTime=@time.ToString(@"hh\:mm")"
                    class="arrive-time-link">@time.ToString(@"hh\:mm")</a>
                 </td>
@@ -114,7 +114,7 @@ else if (Model.LineType == LineType.TROLLEY)
             @foreach (TimeSpan time in Model.Arrivals.Where(a => a.Hours > 17 && a.Hours < 21).OrderBy(a => a.Ticks))
             {
                 <td class="arrival-time-col">
-                    <a href="/subscription/purchase?purchaseType=ticket&lineNumber=@Model.LineNumber
+                    <a href="/subscription/purchase?subscriptionType=ticket&lineNumber=@Model.LineNumber
 &lineType=@Model.LineType.ToString().ToLower()&ticketStartTime=@time.ToString(@"hh\:mm")"
                    class="arrive-time-link">@time.ToString(@"hh\:mm")</a>
                 </td>
@@ -125,7 +125,7 @@ else if (Model.LineType == LineType.TROLLEY)
             @foreach (TimeSpan time in Model.Arrivals.Where(a => a.Hours > 20 && a.Hours < 24).OrderBy(a => a.Ticks))
             {
                 <td class="arrival-time-col">
-                    <a href="/subscription/purchase?purchaseType=ticket&lineNumber=@Model.LineNumber
+                    <a href="/subscription/purchase?subscriptionType=ticket&lineNumber=@Model.LineNumber
 &lineType=@Model.LineType.ToString().ToLower()&ticketStartTime=@time.ToString(@"hh\:mm")"
                    class="arrive-time-link">@time.ToString(@"hh\:mm")</a>
                 </td>
