--- a/UrbanLife.Web/Views/Subscription/Purchase.cshtml
+++ b/UrbanLife.Web/Views/Subscription/Purchase.cshtml
@@ -6,13 +6,15 @@
     ViewData["Title"] = "Покупка на абонамент";
 }
 
-<form>
-    @if (Model.PurchaseType == PurchaseType.CARD)
+<form action="/subscription/purchase" method="post">
+    <input asp-for=@Model.FinalPrice type="hidden" class="final-hidden-price" />
+    <input asp-for=@Model.SubscriptionType type="hidden" class="subscription-type" value=@Model.SubscriptionType />
+    @if (Model.SubscriptionType == SubscriptionType.CARD)
     {
         <p>Избран метод: карта</p>
         <div>
             <label>Зареждане за:</label>
-            <select>
+            <select class="duration">
                 <option value="1-month">1 месец</option>
                 <option value="3-month">3 месеца</option>
                 <option value="1-year">1 година</option>
@@ -20,51 +22,9 @@
             <label>Влиза в сила от:</label>
             <input type="date" min="{Първата свободна дата}" />
         </div>
-    }
-    else if (Model.PurchaseType == PurchaseType.TICKET)
-    {
-        <p>Избран метод: билет</p>
-        <div>
-            <label>Валидност за:</label>
-            @if (Model.LineType.HasValue && Model.LineNumber.HasValue)
-            {
-                <select disabled>
-                    <option value="one-way">еднократно</option>
-                </select>
-            }
-            else
-            {
-                <select>
-                    <option value="1-day">1 ден</option>
-                    <option value="30-minute">30 минути</option>
-                    <option value="60-minute">60 минути</option>
-                    <option value="one-way">еднократно</option>
-                </select>
-            }
-
-            <label>Влиза в сила от:</label>
-            @if (Model.TicketStartTime.HasValue)
-            {
-                <input type="time" value=@Model.TicketStartTime.Value.ToString(@"hh\:mm") disabled />
-            }
-            else
-            {
-                <input type="time" />
-            }
-        </div>
-    }
-
-    <label>Изберете линии</label>
-    @if (Model.LineType.HasValue && Model.LineNumber.HasValue)
-    {
-        <select disabled>
-            <option value="@Model.LineNumber - @Model.LineType.ToString()" selected>@Model.LineNumber</option>
-        </select>
-    }
-    else
-    {
+        <label>Изберете линии</label>
         <select class="lines-list" multiple>
-            <option>Всички</option>
+            <option value="all-lines">Всички</option>
             <optgroup label="Автобус">
                 @foreach (Line line in Model.Lines.Where(l => l.Type == LineType.BUS).OrderBy(l => l.Number))
                 {
@@ -85,10 +45,72 @@
             </optgroup>
         </select>
     }
+    else if (Model.SubscriptionType == SubscriptionType.TICKET)
+    {
+        <p>Избран метод: билет</p>
+        <div>
+            <label>Валидност за:</label>
+            @if (Model.LineType.HasValue && Model.LineNumber.HasValue)
+            {
+                <select class="duration" disabled>
+                    <option value="one-way">еднократно</option>
+                </select>
+            }
+            else
+            {
+                <select class="duration">
+                    <option value="1-day">1 ден</option>
+                    <option value="30-minute">30 минути</option>
+                    <option value="60-minute">60 минути</option>
+                    <option value="one-way">еднократно</option>
+                </select>
+            }
+
+            <label>Влиза в сила от:</label>
+            @if (Model.TicketStartTime.HasValue)
+            {
+                <input type="time" value=@Model.TicketStartTime.Value.ToString(@"hh\:mm") disabled />
+            }
+            else
+            {
+                <input type="time" />
+            }
+        </div>
+        <label>Изберете линии</label>
+        @if (Model.LineType.HasValue && Model.LineNumber.HasValue)
+        {
+            <select disabled>
+                <option value="@Model.LineNumber - @Model.LineType.ToString()" selected>@Model.LineNumber</option>
+            </select>
+        }
+        else
+        {
+            <select class="lines-list">
+                <optgroup label="Автобус">
+                    @foreach (Line line in Model.Lines.Where(l => l.Type == LineType.BUS).OrderBy(l => l.Number))
+                    {
+                        <option value="@line.Number-@line.Type">@line.Number</option>
+                    }
+                </optgroup>
+                <optgroup label="Трамвай">
+                    @foreach (Line line in Model.Lines.Where(l => l.Type == LineType.TRAM).OrderBy(l => l.Number))
+                    {
+                        <option value="@line.Number-@line.Type">@line.Number</option>
+                    }
+                </optgroup>
+                <optgroup label="Тролей">
+                    @foreach (Line line in Model.Lines.Where(l => l.Type == LineType.TROLLEY).OrderBy(l => l.Number))
+                    {
+                        <option value="@line.Number-@line.Type">@line.Number</option>
+                    }
+                </optgroup>
+            </select>
+        }
+    }
 
     <label>Избрани линии: </label>
     <input asp-for=@Model.ChosenLines type="text" class="chosen-lines" value=@string.Join(", ", Model.ChosenLines) disabled />
-    <p>Сума: {35.50} лв.</p>
+    <p class="total-price">Сума: {35.50} лв.</p>
     @if (Model.Cards.Count != 0)
     {
         <label>Платежен метод:</label>
@@ -115,7 +137,7 @@
 </form>
 
 @section Styles {
-    <link rel="stylesheet" href="~/css/purchase-subscription.css" />
+    <link rel="stylesheet" href="~/css/purchase-subscription.css" asp-append-version="true" />
 }
 
 @section Scripts {
